# Skypro_homework

./: README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: test_main.py  test_widget.py
