[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "Backend for bank widget"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.6.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
strict_optional = true
ignore_missing_imports = false
check_untyped_defs = true
exclude = ["venv"]

[tool.flake8]
max-line-length = 88          # Максимальная длина строки (можно изменить по необходимости).
exclude = ["venv", "__pycache__"]  # Исключает папки, которые не нужно проверять.
extend-ignore = ["E203", "W503"]  # Игнорирует указанные правила PEP8 (опционально).
